Fixed Buttons on Dark Mode Display

--- a/style.scss
+++ b/style.scss
@@ -293,8 +293,8 @@ header {
 button {
   padding: 1.1em;
   border-radius: 2em;
-  border: 1px solid $White;
-  background: $White;
+  border: 1px solid #ffff;
+  background: #ffff;
   color: $Light-red;
   font-weight: bold;
   cursor: pointer;
